--- a/less/ku-entries.less
+++ b/less/ku-entries.less
@@ -125,6 +125,7 @@
 
     &.with-form {
       padding: 6px 25px 7px;
+      flex-grow: 0;
     }
     @media only screen and (min-width: @screen-md) {
       &+.entry {
