--- a/docs/assets/css/content-elements/org-chart.less
+++ b/docs/assets/css/content-elements/org-chart.less
@@ -25,7 +25,7 @@ ol {
 
       &::after,
       &::before {
-        background-color: @gray;
+        background-color: @gray-light;
         content: '';
         position: absolute;
       }
@@ -91,7 +91,7 @@ ol {
 
     li {
       & > div {
-        border: 2px solid @gray;
+        border: 1px solid @gray-light;
         border-radius: @border-radius-base;
         min-height: 2em;
         padding: 0.5em;
