--- a/less/ku-entries.less
+++ b/less/ku-entries.less
@@ -40,7 +40,7 @@
   }
 
   .entry {
-    flex: 1;
+    fflex: 1 1 auto;
     min-width: 0;
     text-align: left;
     border-bottom: 1px solid @white-color;
@@ -125,7 +125,7 @@
 
     &.with-form {
       padding: 6px 25px 7px;
-      // flex-basis: 0px;
+      flex: 1;
     }
     @media only screen and (min-width: @screen-md) {
       &+.entry {
