--- a/less/ku-entries.less
+++ b/less/ku-entries.less
@@ -40,7 +40,7 @@
   }
 
   .entry {
-    fflex: 1 1 auto;
+    flex: 1 1 auto;
     min-width: 0;
     text-align: left;
     border-bottom: 1px solid @white-color;
