--- a/less/ku-entries.less
+++ b/less/ku-entries.less
@@ -125,7 +125,7 @@
 
     &.with-form {
       padding: 6px 25px 7px;
-      flex: 1;
+      flex-basis: content;
     }
     @media only screen and (min-width: @screen-md) {
       &+.entry {
