--- a/less/ku-entries.less
+++ b/less/ku-entries.less
@@ -126,6 +126,7 @@
     &.with-form {
       padding: 6px 25px 7px;
       flex-basis: content;
+      max-width: 30%;
     }
     @media only screen and (min-width: @screen-md) {
       &+.entry {
