Org chart in docs

--- a/docs/_includes/header.html
+++ b/docs/_includes/header.html
@@ -37,6 +37,7 @@
 <link rel="icon" type="image/x-icon" href="{{ site.baseurl }}/favicon.ico">
 <link href="{{ site.baseurl }}/dist/css/bootstrap.css" rel="stylesheet">
 <link href="{{ site.baseurl }}/assets/css/mmenu/jquery.mmenu.css" rel="stylesheet">
+<link href="{{ site.baseurl }}/dist/css/content-elements/org-chart.css" rel="stylesheet">
   {% if page.slug != "examples" %}
   <!-- Documentation extras - not for production -->
   <link href="{{ site.baseurl }}/assets/css/docs.min.css" rel="stylesheet">
