--- a/docs/_includes/nav/components.html
+++ b/docs/_includes/nav/components.html
@@ -123,6 +123,7 @@
   </ul>
 </li>
 <li><a href="#ku-factboxes">KU fact boxes</a></li>
+<li><a href="#ku-org-chart">KU Organisational chart</a></li>
 <li>
 <li>
   <a href="#media">Media object</a>
