Org chart in docs

--- a/docs/_includes/components/org-chart.html
+++ b/docs/_includes/components/org-chart.html
@@ -1,3 +1,8 @@
+<script>
+  $(function() {
+    $('head').append('<link href="/bootstrap/dist/css/content-elements/org-chart.css" rel="stylesheet">');
+  });
+  </script>
 <div class="bs-docs-section">
   <h1 id="ku-org-chart" class="page-header">KU Organisational chart</h1>
   Include this stylesheet: <code>&lt;link href=&quot;/bootstrap/dist/css/content-elements/org-chart.css&quot; rel=&quot;stylesheet&quot;&gt;</code>
