Org chart in docs

--- a/docs/_includes/components/org-chart.html
+++ b/docs/_includes/components/org-chart.html
@@ -67,16 +67,19 @@
       <div>
         <div>1</div>
       </div>
+      <!-- Level 2 start -->
       <ol>
         <li>
           <div>
             <div>2</div>
           </div>
+          <!-- Level 3 start -->
           <ol>
             <li>
               <div>
                 <div>3</div>
               </div>
+              <!-- Level 4 start -->
               <ol>
                 <li>
                   <div>
@@ -84,10 +87,13 @@
                   </div>
                 </li>
               </ol>
+              <!-- Level 4 end -->
             </li>
           </ol>
+          <!-- Level 3 end -->
         </li>
       </ol>
+      <!-- Level 2 end -->
     </li>
   </ol>
   {% endhighlight %}
