Adding comments to docs

--- a/docs/_includes/components/org-chart.html
+++ b/docs/_includes/components/org-chart.html
@@ -6,7 +6,7 @@
 <div class="bs-docs-section">
   <h1 id="ku-org-chart" class="page-header">KU Organisational chart</h1>
   Include this stylesheet: <code>&lt;link href=&quot;/bootstrap/dist/css/content-elements/org-chart.css&quot; rel=&quot;stylesheet&quot;&gt;</code>
-  <p>Use nested, ordered lists for each level</p>
+  <p>Use nested, ordered lists for each level.</p>
   <div class="bs-example" data-example-id="ku-org-chart">
     <ol aria-label="Organisationsdiagram" class="org-chart">
       <li>
