Video width fix for IE!!

--- a/less/responsive-embed.less
+++ b/less/responsive-embed.less
@@ -68,6 +68,11 @@
   }
 }
 
+.toplogo #video {
+  // Fix for IE11:
+  max-width: (@container-large-desktop - (@grid-gutter-width *2)); // 1018px;
+}
+
 .media-controls {
   margin-top: 5px;
   /* For Safari 5.1 */
