Accessibility color for code blocks

--- a/less/variables.less
+++ b/less/variables.less
@@ -1023,7 +1023,7 @@
 @kbd-color:                   @white-color;
 @kbd-bg:                      #333;
 
-@pre-bg:                      @gray-f5;
+@pre-bg:                      @white-color;
 @pre-color:                   @gray-dark;
 @pre-border-color:            #ccc;
 @pre-scrollable-max-height:   340px;
