--- a/less/type.less
+++ b/less/type.less
@@ -420,10 +420,11 @@ blockquote {
   }
 }
 
-.column1,
 .right-side {
   blockquote {
     width: 100%!important;
+    margin-left: 0;
+    padding-left: 0;
   }
 }
 // Opposite alignment of blockquote
