--- a/docs/assets/css/ku-neutral/clean-base.less
+++ b/docs/assets/css/ku-neutral/clean-base.less
@@ -10,6 +10,11 @@
   display: none !important;
 }
 
+.main-area {
+  padding-bottom: 13px;
+  border-bottom: 1px solid @gray-666;
+}
+
 #globalfooter,
 #topbar_menu {
   display: none;
