--- a/docs/assets/css/ku-neutral/clean-base.less
+++ b/docs/assets/css/ku-neutral/clean-base.less
@@ -1,23 +1,20 @@
 @import "../../../../less/variables.less"; // Styles to remove global elemts from KU templates in order to make a neutral look.
 
+#globalfooter,
+#topbar_menu,
+.search-area,
 .ku-branding-logo,
 .ku-branding-logo img,
 .ku-nav,
 .ku-navbar-header,
 .ku-topbar,
-.local-footer,
-.search-area {
+.local-footer {
   display: none !important;
 }
 
 .main-area {
   padding-bottom: 13px;
   border-bottom: 1px solid @gray-666;
-}
-
-#globalfooter,
-#topbar_menu {
-  display: none;
 }
 
 .ku-branding-line {
