Modal vertically centered

--- a/docs/_includes/js/modal.html
+++ b/docs/_includes/js/modal.html
@@ -213,12 +213,12 @@ $('#myModal').on('shown.bs.modal', function () {
   <h2 id="modals-center-vertically">Vertically centered</h2>
   <p>Add <code>.modal-dialog-centered</code> to <code>.modal-dialog</code> to vertically center the modal.</p>
   <button type="button" class="btn btn-primary" data-toggle="modal" data-target=".bs-example-vertically-centered">Vertically centered</button>
-  <div class="modal fade bs-example-vertically-centered" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabelCenter">
+  <div class="modal fade bs-example-vertically-centered" tabindex="-1" role="dialog" aria-labelledby="modalLabelCenter">
     <div class="modal-dialog modal-dialog-centered" role="document">
       <div class="modal-content">
         <div class="modal-header">
           <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-          <h4 class="modal-title" id="mySmallModalLabelCenter">Modal title</h4>
+          <h4 class="modal-title" id="modalLabelCenter">Modal title</h4>
         </div>
         <div class="modal-body">
           ...
