--- a/less/modals.less
+++ b/less/modals.less
@@ -155,6 +155,7 @@
     display: flex;
     align-items: center;
     min-height: calc(100% - 1rem);
+    margin: 0 auto;
 
     &::before {
       display: block;
