--- a/docs/_includes/js/modal.html
+++ b/docs/_includes/js/modal.html
@@ -212,7 +212,9 @@ $('#myModal').on('shown.bs.modal', function () {
 
   <h2 id="modals-center-vertically">Vertically centered</h2>
   <p>Add <code>.modal-dialog-centered</code> to <code>.modal-dialog</code> to vertically center the modal.</p>
-  <button type="button" class="btn btn-primary" data-toggle="modal" data-target=".bs-example-vertically-centered">Vertically centered</button>
+  <div class="bs-example bs-example-padded-bottom">
+    <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target=".bs-example-vertically-centered">Vertically centered</button>
+  </div>
   <div class="modal fade bs-example-vertically-centered" tabindex="-1" role="dialog" aria-labelledby="modalLabelCenter">
     <div class="modal-dialog modal-dialog-centered" role="document">
       <div class="modal-content">
