--- a/less/ku-cms-components.less
+++ b/less/ku-cms-components.less
@@ -247,5 +247,7 @@ nav {
 
 .extra_html_end {
   background-color: @white-color;
-  margin-bottom: @grid-gutter-height;
+  padding-bottom: @grid-gutter-height;
+  padding-top: 10px;
+border-top: 1px solid @gray;
 }
