--- a/docs/assets/css/ku-neutral/clean-base.less
+++ b/docs/assets/css/ku-neutral/clean-base.less
@@ -4,12 +4,16 @@
 #topbar_menu,
 .ku-branding-logo,
 .ku-branding-logo img,
-.ku-nav,
 .ku-navbar-header,
 .ku-topbar,
 .local-footer,
 .search-area {
   display: none !important;
+}
+@media all and (max-width: @screen-xs-max) {
+  .ku-nav {
+    display: none!important;
+  }
 }
 
 .main-area {
