--- a/docs/assets/css/ku-neutral/clean-base.less
+++ b/docs/assets/css/ku-neutral/clean-base.less
@@ -4,14 +4,13 @@
 #topbar_menu,
 .ku-branding-logo,
 .ku-branding-logo img,
+.ku-nav,
 .ku-navbar-header,
-.ku-topbar,
-.local-footer,
-.search-area {
+.local-footer {
   display: none !important;
 }
-@media all and (max-width: @screen-xs-max) {
-  .ku-nav {
+@media all and (min-width: @screen-sm) {
+  .ku-topbar {
     display: none!important;
   }
 }
