--- a/docs/assets/css/ku-neutral/clean-base.less
+++ b/docs/assets/css/ku-neutral/clean-base.less
@@ -4,7 +4,7 @@
 #topbar_menu,
 .ku-branding-logo,
 .ku-branding-logo img,
-.ku-nav,
+.ku-nav, .search-area,
 .ku-navbar-header,
 .local-footer {
   display: none !important;
