--- a/less/variables.less
+++ b/less/variables.less
@@ -112,7 +112,7 @@
 @sund-sub_2-hover: darken(@sund-sub_2, 5%);
 @sund-sub_3: #00706e;
 @sund-sub_3-hover: darken(@sund-sub_3, 5%);
-@sund-sub_4: #b0d54e;
+@sund-sub_4: #008000;
 @sund-sub_4-hover: darken(@sund-sub_4, 5%);
 //Samf
 @samf-sub_1: #2a3d66;
