--- a/less/ku-slickslider.less
+++ b/less/ku-slickslider.less
@@ -226,7 +226,7 @@
 
 .slick-pause {
   z-index: 2;
-  font-size: 26px;
+  font-size: 24px;
   line-height: 0;
   position: absolute;
   bottom: 8px;
@@ -235,17 +235,12 @@
   cursor: pointer;
   color: @white-color;
   outline: none;
-  background: rgba(170,170,170,.7);
-  opacity: 0.45;
-  border: none;
+  background: #aaa;
+  border: 1px solid @gray-light;
+  border-radius: 50%;
 
   &:focus {
     .tab-focus();
-  }
-
-  &:focus,
-  &:hover {
-    opacity: 1;
   }
 
   .glyphicon {
@@ -426,11 +421,6 @@
       height: 100%;
       width: 100%;
     }
-  }
-
-  [class="caption"] {
-    // Make room for pause button
-    padding-right: 39px!important;
   }
 
   &:hover .caption {
