Slick slider pause

--- a/less/ku-slickslider.less
+++ b/less/ku-slickslider.less
@@ -230,13 +230,12 @@
   position: absolute;
   bottom: 8px;
   right: 1%;
-  padding: 4px;
+  padding: 6px;
   cursor: pointer;
   color: @white-color;
   outline: none;
   background: rgba(170,170,170,.8);
-  opacity: 0.45;
-  border: none;
+  border: 1px solid @gray-light;
 
   &:focus {
     .tab-focus();
