--- a/less/ku-slickslider.less
+++ b/less/ku-slickslider.less
@@ -236,6 +236,7 @@
   outline: none;
   background: rgba(170,170,170,.8);
   border: 1px solid @gray-light;
+  border-radius: 50%;
 
   &:focus {
     .tab-focus();
