Changing primary color for accessibility

--- a/less/variables.less
+++ b/less/variables.less
@@ -152,9 +152,9 @@
 @ku-entry-end:          #edece9;
 @ku-entry-border:       #e8e8e8;
 
-@brand-primary:         darken(#7ea5a8, 6.5%);
+@brand-primary:         #39808e;
 @brand-success:         #617e25;
-@brand-info:            #577d7F;
+@brand-info:            #577d7f;
 @brand-warning:         #bb5b02;
 @brand-danger:          #7b161a;
 
