Fix for arrow in gridbox

--- a/less/ku-gridboxes-bootstrap.less
+++ b/less/ku-gridboxes-bootstrap.less
@@ -244,7 +244,7 @@
     position: absolute;
     z-index: 5;
     @media all and (max-width: @screen-xs-max) {
-      color: @white-color;
+      color: inherit;
     }
   }
   // Hide arrow
