--- a/docs/assets/css/ku-neutral/clean-base.less
+++ b/docs/assets/css/ku-neutral/clean-base.less
@@ -4,10 +4,15 @@
 #topbar_menu,
 .ku-branding-logo,
 .ku-branding-logo img,
-.ku-nav, .search-area,
+.ku-nav,
 .ku-navbar-header,
-.local-footer {
+.local-footer,
+.search-area {
   display: none !important;
+}
+
+.topbar-logo {
+  background-image: none;
 }
 @media all and (min-width: @screen-sm) {
   .ku-topbar {
