--- a/docs/assets/css/ku-neutral/clean-base.less
+++ b/docs/assets/css/ku-neutral/clean-base.less
@@ -12,7 +12,7 @@
 }
 
 .topbar-logo {
-  background-image: none;
+  background-image: none!important;
 }
 @media all and (min-width: @screen-sm) {
   .ku-topbar {
