--- a/docs/assets/css/ku-neutral/clean-base.less
+++ b/docs/assets/css/ku-neutral/clean-base.less
@@ -11,6 +11,11 @@
   display: none !important;
 }
 
+#mmenu-placeholder ~ li {
+  // Hide KU menu entries in mobile menu
+  display: none;
+}
+
 .topbar-logo {
   background-image: none!important;
 }
