--- a/docs/assets/css/ku-neutral/clean-base.less
+++ b/docs/assets/css/ku-neutral/clean-base.less
@@ -11,8 +11,13 @@
   display: none !important;
 }
 
-#mmenu-placeholder ~ li {
-  // Hide KU menu entries in mobile menu
+#mobileleftmenu .mm-panels {
+  top: 0;
+}
+
+#mmenu-placeholder ~ li,
+.mm-navbars_top,
+.search-placeholder {
   display: none;
 }
 
