Org chart css min

--- a/docs/_includes/components/org-chart.html
+++ b/docs/_includes/components/org-chart.html
@@ -1,6 +1,6 @@
 <script>
   $(function() {
-    $('head').append('<link href="/bootstrap/dist/css/content-elements/org-chart.css" rel="stylesheet">');
+    $('head').append('<link href="/bootstrap/dist/css/content-elements/org-chart.min.css" rel="stylesheet">');
   });
   </script>
 <div class="bs-docs-section">
