--- a/docs/assets/css/parallax/parallax.less
+++ b/docs/assets/css/parallax/parallax.less
@@ -44,7 +44,7 @@
 }
 
 #content {
-  margin-top: 68px;
+  margin-top: 42px;
 }
 
 .breadcrumbs,
@@ -79,7 +79,7 @@
   margin-right: -50vw;
 
   .block-content {
-    font-size: 18px;
+    font-size: 14px;
     padding: 30px 0;
     width: 100%;
 
@@ -105,21 +105,26 @@
   .block-content {
     padding: 30px;
     background: rgba(300, 300, 300, 0.9);
-    box-shadow: 0 1px 8px rgba(0, 0, 0, .1), 0 16px 48px rgba(0, 0, 0, .1), 0 24px 60px rgba(0, 0, 0, .1);
   }
 }
 @media all and (max-width: @screen-xs-max) {
   .campaign-block .block-content {
-    padding: 30px;
+    padding: 10px 20px;
   }
 }
 @media all and (min-width: @screen-sm) {
+  #content {
+    margin-top: 68px;
+  }
+
   .campaign-block {
     /* Take desktop scrollbar into account: */
     width: calc(100vw - 9px);
 
     .block-content {
       max-width: 746px;
+      font-size: 18px;
+      box-shadow: 0 1px 8px rgba(0, 0, 0, .1), 0 16px 48px rgba(0, 0, 0, .1), 0 24px 60px rgba(0, 0, 0, .1);
     }
   }
 }
