--- a/docs/assets/css/parallax/parallax.less
+++ b/docs/assets/css/parallax/parallax.less
@@ -1,5 +1,6 @@
-@import "../../../../less/variables.less"; // Scroll progress bar
-
+@import "../../../../less/variables.less";
+// Scroll progress bar
+// Paralax: https://github.com/nk-o/jarallax
 .progress {
   margin: 0;
   height: 6px;
@@ -89,21 +90,9 @@
   }
 }
 
-.block-bg-fixed {
+.jarallax {
   color: @text-color;
-  /* Height set for IE11 in order to get align-items:*/
-  height: 500px;
   min-height: 100vh;
-  background-attachment: scroll;
-  background-position: center center;
-  transform: translateZ(0);
-  will-change: transform;
-  @media (min-width: @screen-sm) {
-    &:nth-child(1) {
-      /*Move down the very first parallax image in order to avoid flickering on load */
-      background-position: center 22px;
-    }
-  }
 
   .block-content {
     padding: 30px;
@@ -111,8 +100,10 @@
   }
 }
 @media all and (max-width: @screen-xs-max) {
-  .campaign-block .block-content {
-    padding: 10px 20px;
+  .campaign-block {
+    .block-content {
+      padding: 10px 20px;
+    }
   }
 }
 @media all and (min-width: @screen-sm) {
@@ -130,9 +121,7 @@
     }
   }
 
-  .block-bg-fixed {
-    background-attachment: fixed;
-
+  .jarallax {
     .block-content {
       box-shadow: 0 1px 8px rgba(0, 0, 0, .1), 0 16px 48px rgba(0, 0, 0, .1), 0 24px 60px rgba(0, 0, 0, .1);
     }
