--- a/docs/assets/css/parallax/parallax.less
+++ b/docs/assets/css/parallax/parallax.less
@@ -99,26 +99,26 @@
   color: @text-color;
   min-height: 100vh;
 
-  & > .jarallax-img {
-    position: absolute;
-    object-fit: cover;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: -1;
-    // Try to minimize flickering:
-    will-change: transform;
-    backface-visibility: hidden;
-    perspective: 1000;
-    transform-origin: right bottom;
-    transform-style: preserve-3d;
-  }
-
   .block-content {
     padding: 15px;
     background: rgba(@white-color, .9);
   }
+}
+
+.jarallax-img {
+  position: absolute;
+  object-fit: cover;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  // Try to minimize flickering:
+  will-change: transform;
+  backface-visibility: hidden;
+  perspective: 1000;
+  transform-origin: right bottom;
+  transform-style: preserve-3d;
 }
 @media all and (min-width: @screen-sm) {
   #content {
