--- a/docs/assets/css/parallax/parallax.less
+++ b/docs/assets/css/parallax/parallax.less
@@ -95,7 +95,7 @@
   }
 }
 
-.jarallax {
+.block-bg {
   color: @text-color;
   min-height: 100vh;
 
@@ -114,7 +114,7 @@
   height: 100%;
   // Try to minimize flickering:
   will-change: transform;
-  backface-visibility: hidden;
+  //backface-visibility: hidden;
   transform-style: preserve-3d;
 }
 
@@ -134,7 +134,7 @@
     }
   }
 
-  .jarallax {
+  .block-bg {
     .block-content {
       box-shadow: 0 1px 8px rgba(@gray-base, .1), 0 16px 48px rgba(@gray-base, .1), 0 24px 60px rgba(@gray-base, .1);
     }
