--- a/docs/assets/css/parallax/parallax.less
+++ b/docs/assets/css/parallax/parallax.less
@@ -130,12 +130,13 @@
     .block-content {
       max-width: 746px;
       font-size: 18px;
-      padding: 30px;
+      padding: 30px 0;
     }
   }
 
   .block-bg {
     .block-content {
+      padding: 30px;
       box-shadow: 0 1px 8px rgba(@gray-base, .1), 0 16px 48px rgba(@gray-base, .1), 0 24px 60px rgba(@gray-base, .1);
     }
   }
