--- a/docs/assets/css/parallax/parallax.less
+++ b/docs/assets/css/parallax/parallax.less
@@ -82,6 +82,7 @@
     padding: 10px 20px;
     margin: 10px 0;
     width: 100%;
+    z-index: 0;
 
     h3 {
       margin-top: 0;
@@ -90,8 +91,8 @@
 }
 @media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
   /* IE 11 only in order to understand vertical alignment */
-  .campaign-block {
-    height: 500px;
+  .block-bg {
+    height: 600px;
   }
 }
 
@@ -111,6 +112,7 @@
   top: 0;
   left: 0;
   width: 100%;
+  min-height: 100%;
   height: 100%;
   // Try to minimize flickering:
   will-change: transform;
