--- a/less/faculties/faelles.less
+++ b/less/faculties/faelles.less
@@ -17,7 +17,12 @@ h2 {
     background: #ae1b65 !important;
   }
 }
-
+// Hide chatbot on mobile
+@media all and (max-width: @screen-xs-max) {
+  #botxo-chat {
+    display: none!important;
+  }
+}
 
 .gridbox {
   &.faculty_color {
