--- a/docs/assets/css/ku-neutral/clean-base.less
+++ b/docs/assets/css/ku-neutral/clean-base.less
@@ -34,18 +34,13 @@
   margin-bottom: 0;
 }
 
-.ku-branding-logo {
-  background-image: url('https://dummyimage.com/80x80/ccc/000.png');
-  background-repeat: no-repeat;
+.ku-branding-line {
+  height: 83px;
+  width: 100%;
+  @media all and (min-width: 768px) {
+    margin-left: 25%;
+  }
 }
-
-// .ku-branding-line {
-//   height: 83px;
-//   width: 100%;
-//   @media all and (min-width: 768px) {
-//     margin-left: 25%;
-//   }
-// }
 
 .search-area {
   width: 0;
