--- a/docs/assets/css/ku-neutral/restyling.less
+++ b/docs/assets/css/ku-neutral/restyling.less
@@ -2,26 +2,30 @@
 @left-menu-desktop: #ff9900;
 
 body {
-  /* General font */
-  font-family: arial, sans-serif;
+  /* General font settings */
 }
 /* Logo */
 .ku-branding-logo {
   /* Add link to logo - max width: 250px, height: 80px */
   background-image: url("https://dummyimage.com/200x80/ccc/000.png");
   background-repeat: no-repeat;
-  width: 262px;
+  width: 262px!important;
+}
+
+/* Don't change anything here*/
+.ku-branding-line {
+  display: flex;
+  flex-direction: row;
 }
 @media all and (min-width: @screen-sm) {
   .ku-branding-text {
     flex: 1 1 auto;
-    position: relative;
-    left: unset;
-    bottom: unset;
-    top: 10px;
+    position: relative!important;
+    left: unset!important;
+    bottom: unset!important;
+    top: 10px!important;
   }
 }
-/* Don't change anything here*/
 
 .ku-branding-line {
   height: 83px;
@@ -98,12 +102,13 @@ body {
 #mobileleftmenu {
   .mm-navbar__title {
     background-color: @left-menu-desktop;
-    border-bottom: solid 1px @ku-light-grey;
+    border-bottom: solid 1px @ku-gray;
   }
 
   li {
     &.local1_mmenu {
       background: @left-menu-desktop;
+      border-top: 1px solid @ku-gray;
     }
   }
 }
