--- a/docs/assets/css/ku-neutral/restyling.less
+++ b/docs/assets/css/ku-neutral/restyling.less
@@ -5,36 +5,51 @@ body {
   /* General font settings */
 }
 /* Logo */
+
 .ku-branding-logo {
   /* Add link to logo - max width: 250px, height: 80px */
   background-image: url("https://dummyimage.com/200x80/ccc/000.png");
+  /* Don't change anything here: */
   background-repeat: no-repeat;
-  width: 262px!important;
-}
-
-/* Don't change anything here*/
-.ku-branding-line {
-  display: flex;
-  flex-direction: row;
-}
-@media all and (min-width: @screen-sm) {
-  .ku-branding-text {
-    flex: 1 1 auto;
-    position: relative!important;
-    left: unset!important;
-    bottom: unset!important;
-    top: 10px!important;
+  @media (min-width: @screen-xs) and (max-width: @screen-xs-max) {
+    width: 316px!important;
+  }
+  @media (min-width: @screen-sm) {
+    width: 262px!important;
   }
 }
+
+/* Don't change anything here: */
+.ku-branding-line {
+  display: flex;
+  flex-direction: column;
+}
+
+.ku-branding-text {
+  flex: 1 1 auto;
+  position: relative!important;
+  left: unset!important;
+  bottom: unset!important;
+  top: 10px!important;
+}
+
+@media (min-width: @screen-sm) {
+  .ku-branding-line {
+    flex-direction: row;
+  }
+}
+
+/* Don't change anything here: */
 
 .ku-branding-line {
   height: 83px;
   width: 100%;
-  @media all and (min-width: @screen-sm) {
+  @media (min-width: @screen-sm) {
     margin-left: 0;
   }
 }
-/* Left menu desktop styling */
+/* Left menu desktop styling - change colors here: */
+
 .ku-leftmenu {
   ul {
     li {
@@ -59,7 +74,7 @@ body {
     }
 
     & > li {
-      /*  Top level menu dots */
+      /*  Top level menu dots - change colors here: */
       & > a {
         &::before {
           color: @left-menu-desktop;
@@ -75,7 +90,7 @@ body {
           }
         }
       }
-      /* Top level menu dots with sublevels */
+      /* Top level menu dots with sublevels - change colors here: */
       &[class^=active] {
         & > a {
           &::before {
@@ -87,7 +102,7 @@ body {
 
       ul {
         li {
-          /* 2. level and below menu dots */
+          /* 2. level and below menu dots - change colors here: */
           a {
             &::before {
               background-color: @left-menu-desktop;
@@ -98,7 +113,8 @@ body {
     }
   }
 }
-/* Mobile menu styling */
+/* Mobile menu styling - change colors here: */
+
 #mobileleftmenu {
   .mm-navbar__title {
     background-color: @left-menu-desktop;
