--- a/docs/assets/css/ku-neutral/restyling.less
+++ b/docs/assets/css/ku-neutral/restyling.less
@@ -1,5 +1,4 @@
-@import "../../../../less/variables.less";
-/* Selected classes to enable overwriting and restyling of global elements. */
+@import "../../../../less/variables.less"; /* Selected classes to enable overwriting and restyling of global elements. */
 /* When adding new colors, please consider the EU law of accessibility. Particularly in terms of color contrast. */
 @left-menu-desktop: #ff9900;
 
@@ -7,14 +6,32 @@ body {
   /* General font settings */
 }
 
-/* Logo */
+/* Navnetræk: fx. font sizes in various view ports: */
 
-.ku-branding-logo {
-  /* Add link to logo - max width: 250px, height: 80px */
-  background-image: url("https://dummyimage.com/200x80/ccc/000.png");
+.ku-branding {
+  .ku-branding-text {
+    .ku-branding-text-major {
+      /* Mobile */
+      font-size: 24px;
+      @media (min-width: @screen-sm) {
+        /* iPad */
+        font-size: 30px;
+      }
+      @media (min-width: @screen-sm) {
+        /* Desktop */
+        font-size: 32px;
+      }
+    }
+  }
 }
 
 
+/* Logo */
+
+.ku-branding-logo {
+  /* Add link to logo - max width: 250px, max height: 80px */
+  background-image: url("https://dummyimage.com/200x80/ccc/000.png");
+}
 /* Left menu desktop styling - change colors here: */
 
 .ku-leftmenu {
@@ -95,18 +112,15 @@ body {
     }
   }
 }
-
 /* Don't change anything below here: */
 
 .ku-branding-logo {
   background-repeat: no-repeat;
   bottom: unset!important;
+  left: unset!important;
   width: 100%!important;
   @media (min-width: @screen-xs) and (max-width: @screen-xs-max) {
     width: 262px!important;
-  }
-  @media (min-width: @screen-sm) {
-    width: 316px!important;
   }
 }
 
