--- a/docs/assets/css/ku-neutral/restyling.less
+++ b/docs/assets/css/ku-neutral/restyling.less
@@ -12,14 +12,14 @@ body {
   .ku-branding-text {
     .ku-branding-text-major {
       /* Mobile */
-      font-size: 24px;
+      font-size: 15px;
       @media (min-width: @screen-sm) {
         /* iPad */
-        font-size: 30px;
+        font-size: 20px;
       }
       @media (min-width: @screen-sm) {
         /* Desktop */
-        font-size: 32px;
+        font-size: 20px;
       }
     }
   }
@@ -119,7 +119,7 @@ body {
   bottom: unset!important;
   left: unset!important;
   width: 100%!important;
-  @media (min-width: @screen-xs) and (max-width: @screen-xs-max) {
+  @media (min-width: @screen-xs) {
     width: 262px!important;
   }
 }
