--- a/docs/assets/css/ku-neutral/restyling.less
+++ b/docs/assets/css/ku-neutral/restyling.less
@@ -7,7 +7,7 @@
 body {
   /* General font settings */
 }
-/* Navnetr&aelig;k: fx. font sizes in various view ports: */
+/* Navnetraek: for example font sizes in various view ports: */
 .ku-branding {
   .ku-branding-text {
     .ku-branding-text-major {
