--- a/docs/assets/css/ku-neutral/restyling.less
+++ b/docs/assets/css/ku-neutral/restyling.less
@@ -15,9 +15,9 @@ body {
       font-size: 15px;
       @media (min-width: @screen-sm) {
         /* iPad */
-        font-size: 20px;
+        font-size: 18px;
       }
-      @media (min-width: @screen-sm) {
+      @media (min-width: @screen-md) {
         /* Desktop */
         font-size: 20px;
       }
