--- a/docs/assets/css/ku-neutral/clean-base.less
+++ b/docs/assets/css/ku-neutral/clean-base.less
@@ -55,3 +55,10 @@
     border-bottom: @gray-666!important;
   }
 }
+
+.was {
+  background-color: @white-color;
+  padding-bottom: @grid-gutter-height;
+  padding-top: 10px;
+  border-top: 1px solid @gray;
+}
