--- a/docs/assets/css/ku-neutral/restyling.less
+++ b/docs/assets/css/ku-neutral/restyling.less
@@ -105,6 +105,17 @@ body {
     }
   }
 }
+
+/* Footer */
+.extra_html_end {
+  position: relative;
+  background: @gray-light;
+  @media (min-width: @screen-sm) {
+    background: linear-gradient(to bottom, rgba(@gray-light, 1) 0%, rgba(134, 134, 134, 1) 25%, rgba(142, 141, 141, 1) 50%, rgba(136, 136, 136, 1) 80%, rgba(128, 128, 128, 1) 100%);
+  }
+  color: @white-color;
+}
+
 /* Don't change anything below here! */
 .ku-branding-logo {
   background-repeat: no-repeat;
